--- a/Haketon/Haketon.vcxproj.filters
+++ b/Haketon/Haketon.vcxproj.filters
@@ -1,42 +1,46 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="Haketon">
+      <UniqueIdentifier>{0FB52E94-7B94-AD2F-84AC-3806F00A1491}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Haketon\Events">
+      <UniqueIdentifier>{133A4283-FF07-3689-E89B-A6AFD40812EE}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Haketon\Core.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClInclude Include="src\Haketon.h" />
     <ClInclude Include="src\Haketon\Application.h">
-      <Filter>Header Files</Filter>
+      <Filter>Haketon</Filter>
     </ClInclude>
-    <ClInclude Include="src\Haketon.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="src\Haketon\Core.h">
+      <Filter>Haketon</Filter>
     </ClInclude>
     <ClInclude Include="src\Haketon\EntryPoint.h">
-      <Filter>Header Files</Filter>
+      <Filter>Haketon</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Haketon\Events\ApplicationEvent.h">
+      <Filter>Haketon\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Haketon\Events\Event.h">
+      <Filter>Haketon\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Haketon\Events\KeyEvent.h">
+      <Filter>Haketon\Events</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Haketon\Events\MouseEvent.h">
+      <Filter>Haketon\Events</Filter>
     </ClInclude>
     <ClInclude Include="src\Haketon\Log.h">
-      <Filter>Header Files</Filter>
+      <Filter>Haketon</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Haketon\Application.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Haketon</Filter>
     </ClCompile>
     <ClCompile Include="src\Haketon\Log.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Haketon</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
