--- a/Haketon/Haketon.vcxproj.filters
+++ b/Haketon/Haketon.vcxproj.filters
@@ -34,6 +34,7 @@
     <ClInclude Include="src\Haketon\Log.h">
       <Filter>Haketon</Filter>
     </ClInclude>
+    <ClInclude Include="src\hkpch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Haketon\Application.cpp">
@@ -42,5 +43,6 @@
     <ClCompile Include="src\Haketon\Log.cpp">
       <Filter>Haketon</Filter>
     </ClCompile>
+    <ClCompile Include="src\hkpch.cpp" />
   </ItemGroup>
 </Project>
