--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Haketon/vendor/GLFW"]
 	path = Haketon/vendor/GLFW
 	url = https://github.com/TheCherno/GLFW
+[submodule "Haketon/vendor/imgui"]
+	path = Haketon/vendor/imgui
+	url = https://github.com/TheCherno/imgui
