--- a/Haketon/Haketon.vcxproj.filters
+++ b/Haketon/Haketon.vcxproj.filters
@@ -7,8 +7,14 @@
     <Filter Include="Haketon\Events">
       <UniqueIdentifier>{133A4283-FF07-3689-E89B-A6AFD40812EE}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Haketon\ImGui">
+      <UniqueIdentifier>{79795461-E539-D097-AE74-19151AF41474}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Platform">
       <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\OpenGL">
+      <UniqueIdentifier>{1E7D2C1D-8A08-9AE1-9319-1DD6FF23F6E1}</UniqueIdentifier>
     </Filter>
     <Filter Include="Platform\Windows">
       <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
@@ -37,6 +43,9 @@
     <ClInclude Include="src\Haketon\Events\MouseEvent.h">
       <Filter>Haketon\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\Haketon\ImGui\ImGuiLayer.h">
+      <Filter>Haketon\ImGui</Filter>
+    </ClInclude>
     <ClInclude Include="src\Haketon\Layer.h">
       <Filter>Haketon</Filter>
     </ClInclude>
@@ -49,6 +58,9 @@
     <ClInclude Include="src\Haketon\Window.h">
       <Filter>Haketon</Filter>
     </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
       <Filter>Platform\Windows</Filter>
     </ClInclude>
@@ -58,6 +70,9 @@
     <ClCompile Include="src\Haketon\Application.cpp">
       <Filter>Haketon</Filter>
     </ClCompile>
+    <ClCompile Include="src\Haketon\ImGui\ImGuiLayer.cpp">
+      <Filter>Haketon\ImGui</Filter>
+    </ClCompile>
     <ClCompile Include="src\Haketon\Layer.cpp">
       <Filter>Haketon</Filter>
     </ClCompile>
@@ -66,6 +81,9 @@
     </ClCompile>
     <ClCompile Include="src\Haketon\Log.cpp">
       <Filter>Haketon</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
+      <Filter>Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
       <Filter>Platform\Windows</Filter>
