--- a/Haketon/Haketon.vcxproj.filters
+++ b/Haketon/Haketon.vcxproj.filters
@@ -16,9 +16,6 @@
     <Filter Include="src\Platform">
       <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\Platform\OpenGL">
-      <UniqueIdentifier>{35A49437-A105-7245-2A73-B8F796D3A804}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\Platform\Windows">
       <UniqueIdentifier>{5B054582-4794-CE4B-F0B2-E246DC20DFF1}</UniqueIdentifier>
     </Filter>
@@ -92,9 +89,6 @@
     </ClInclude>
     <ClInclude Include="src\Haketon\Window.h">
       <Filter>src\Haketon</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
-      <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsInput.h">
       <Filter>src\Platform\Windows</Filter>
@@ -1214,6 +1208,9 @@
     <ClCompile Include="src\Haketon\Application.cpp">
       <Filter>src\Haketon</Filter>
     </ClCompile>
+    <ClCompile Include="src\Haketon\ImGui\ImGuiBuild.cpp">
+      <Filter>src\Haketon\ImGui</Filter>
+    </ClCompile>
     <ClCompile Include="src\Haketon\ImGui\ImGuiLayer.cpp">
       <Filter>src\Haketon\ImGui</Filter>
     </ClCompile>
@@ -1225,9 +1222,6 @@
     </ClCompile>
     <ClCompile Include="src\Haketon\Log.cpp">
       <Filter>src\Haketon</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
-      <Filter>src\Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
       <Filter>src\Platform\Windows</Filter>
