--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,12 +4,23 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=386,32
-Size=550,680
+Pos=838,19
+Size=442,701
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Example: Log]
 Pos=60,60
 Size=500,400
 Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Docking][Data]
+DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=284,354 Size=1280,701 Split=X
+  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=836,701 CentralNode=1
+  DockNode  ID=0x00000003 Parent=0x3BC79352 SizeRef=442,701 Selected=0xE927CF2F
 
