Add example OpenGL shader code

--- a/Haketon/Haketon.vcxproj.filters
+++ b/Haketon/Haketon.vcxproj.filters
@@ -1205,6 +1205,7 @@
     </ClInclude>
     <ClInclude Include="src\Haketon\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="src\Haketon\Renderer\Shader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Haketon\Application.cpp">
@@ -1235,5 +1236,6 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
+    <ClCompile Include="src\Haketon\Renderer\Shader.cpp" />
   </ItemGroup>
 </Project>
