--- a/Haketon/Haketon.vcxproj
+++ b/Haketon/Haketon.vcxproj
@@ -155,10 +155,14 @@
     <ClInclude Include="src\Haketon\LayerStack.h" />
     <ClInclude Include="src\Haketon\Log.h" />
     <ClInclude Include="src\Haketon\MouseButtonCodes.h" />
+    <ClInclude Include="src\Haketon\Renderer\Buffer.h" />
     <ClInclude Include="src\Haketon\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Haketon\Renderer\Renderer.h" />
     <ClInclude Include="src\Haketon\Renderer\Shader.h" />
     <ClInclude Include="src\Haketon\Window.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\hkpch.h" />
@@ -538,8 +542,12 @@
     <ClCompile Include="src\Haketon\Layer.cpp" />
     <ClCompile Include="src\Haketon\LayerStack.cpp" />
     <ClCompile Include="src\Haketon\Log.cpp" />
+    <ClCompile Include="src\Haketon\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Haketon\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Haketon\Renderer\Shader.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\hkpch.cpp">
