--- a/Haketon/Haketon.vcxproj.filters
+++ b/Haketon/Haketon.vcxproj.filters
@@ -13,8 +13,14 @@
     <Filter Include="src\Haketon\ImGui">
       <UniqueIdentifier>{D0EE89D8-3C05-886E-857C-1390F1D158F6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Haketon\Renderer">
+      <UniqueIdentifier>{8C2321BB-78B2-AA84-21D1-BE7F0D3FBB2A}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\Platform">
       <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Platform\OpenGL">
+      <UniqueIdentifier>{35A49437-A105-7245-2A73-B8F796D3A804}</UniqueIdentifier>
     </Filter>
     <Filter Include="src\Platform\Windows">
       <UniqueIdentifier>{5B054582-4794-CE4B-F0B2-E246DC20DFF1}</UniqueIdentifier>
@@ -87,8 +93,29 @@
     <ClInclude Include="src\Haketon\MouseButtonCodes.h">
       <Filter>src\Haketon</Filter>
     </ClInclude>
+    <ClInclude Include="src\Haketon\Renderer\Buffer.h">
+      <Filter>src\Haketon\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Haketon\Renderer\GraphicsContext.h">
+      <Filter>src\Haketon\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Haketon\Renderer\Renderer.h">
+      <Filter>src\Haketon\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Haketon\Renderer\Shader.h">
+      <Filter>src\Haketon\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\Haketon\Window.h">
       <Filter>src\Haketon</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h">
+      <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsInput.h">
       <Filter>src\Platform\Windows</Filter>
@@ -1203,9 +1230,6 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp">
       <Filter>vendor\glm\glm</Filter>
     </ClInclude>
-    <ClInclude Include="src\Haketon\Renderer\GraphicsContext.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
-    <ClInclude Include="src\Haketon\Renderer\Shader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Haketon\Application.cpp">
@@ -1226,6 +1250,24 @@
     <ClCompile Include="src\Haketon\Log.cpp">
       <Filter>src\Haketon</Filter>
     </ClCompile>
+    <ClCompile Include="src\Haketon\Renderer\Buffer.cpp">
+      <Filter>src\Haketon\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Haketon\Renderer\Renderer.cpp">
+      <Filter>src\Haketon\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Haketon\Renderer\Shader.cpp">
+      <Filter>src\Haketon\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
       <Filter>src\Platform\Windows</Filter>
     </ClCompile>
@@ -1235,7 +1277,5 @@
     <ClCompile Include="src\hkpch.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
-    <ClCompile Include="src\Haketon\Renderer\Shader.cpp" />
   </ItemGroup>
 </Project>
