--- a/Haketon/Haketon.vcxproj
+++ b/Haketon/Haketon.vcxproj
@@ -157,12 +157,16 @@
     <ClInclude Include="src\Haketon\MouseButtonCodes.h" />
     <ClInclude Include="src\Haketon\Renderer\Buffer.h" />
     <ClInclude Include="src\Haketon\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Haketon\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Haketon\Renderer\Renderer.h" />
+    <ClInclude Include="src\Haketon\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Haketon\Renderer\Shader.h" />
     <ClInclude Include="src\Haketon\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\hkpch.h" />
@@ -534,6 +538,7 @@
     <ClInclude Include="vendor\glm\glm\vec3.hpp" />
     <ClInclude Include="vendor\glm\glm\vec4.hpp" />
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp" />
+    <ClInclude Include="src\Haketon\Renderer\VertexArray.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Haketon\Application.cpp" />
@@ -543,16 +548,21 @@
     <ClCompile Include="src\Haketon\LayerStack.cpp" />
     <ClCompile Include="src\Haketon\Log.cpp" />
     <ClCompile Include="src\Haketon\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Haketon\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Haketon\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\Haketon\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\Haketon\Renderer\Shader.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\hkpch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\Haketon\Renderer\VertexArray.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="vendor\GLFW\GLFW.vcxproj">
