--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,9 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1773,323
+ViewportPos=1730,213
 ViewportId=0xE927CF2F
-Size=442,698
+Size=442,781
 Collapsed=0
 
 [Window][Example: Log]
@@ -19,8 +19,7 @@ Size=1280,720
 Collapsed=0
 
 [Window][Test]
-ViewportPos=104,533
-ViewportId=0x784DD132
+Pos=29,187
 Size=262,196
 Collapsed=0
 
