--- a/Haketon/Haketon.vcxproj
+++ b/Haketon/Haketon.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="src\Haketon\MouseButtonCodes.h" />
     <ClInclude Include="src\Haketon\Renderer\Buffer.h" />
     <ClInclude Include="src\Haketon\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Haketon\Renderer\OrthographicCamera.h" />
     <ClInclude Include="src\Haketon\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Haketon\Renderer\Renderer.h" />
     <ClInclude Include="src\Haketon\Renderer\RendererAPI.h" />
@@ -548,6 +549,7 @@
     <ClCompile Include="src\Haketon\LayerStack.cpp" />
     <ClCompile Include="src\Haketon\Log.cpp" />
     <ClCompile Include="src\Haketon\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Haketon\Renderer\OrthographicCamera.cpp" />
     <ClCompile Include="src\Haketon\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Haketon\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Haketon\Renderer\RendererAPI.cpp" />
