--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -6,7 +6,7 @@ Collapsed=0
 [Window][Dear ImGui Demo]
 ViewportPos=1730,213
 ViewportId=0xE927CF2F
-Size=442,781
+Size=627,959
 Collapsed=0
 
 [Window][Example: Log]
@@ -19,8 +19,14 @@ Size=1280,720
 Collapsed=0
 
 [Window][Test]
-Pos=29,187
+Pos=55,169
 Size=262,196
+Collapsed=0
+
+[Window][Settings]
+ViewportPos=153,448
+ViewportId=0x1C33C293
+Size=377,173
 Collapsed=0
 
 [Docking][Data]
