--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -24,9 +24,8 @@ Size=262,196
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=153,448
-ViewportId=0x1C33C293
-Size=377,173
+Pos=15,76
+Size=257,160
 Collapsed=0
 
 [Docking][Data]
