Add our own GLFW fork as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Haketon/vendor/imgui"]
 	path = Haketon/vendor/imgui
 	url = https://github.com/ocornut/imgui
+[submodule "Haketon/vendor/GLFW"]
+	path = Haketon/vendor/GLFW
+	url = https://github.com/SenseiHaketon/glfw
