Commit default Layout

--- a/HaketonEditor/imgui.ini
+++ b/HaketonEditor/imgui.ini
@@ -9,41 +9,204 @@ Size=400,400
 Collapsed=0
 
 [Window][Stats]
-Pos=1230,24
-Size=370,876
+Pos=1367,26
+Size=233,874
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Viewport]
-Pos=556,24
-Size=672,876
+Pos=518,26
+Size=847,483
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000008,0
 
 [Window][Scene Hierarchy]
-Pos=0,24
-Size=554,502
+Pos=0,26
+Size=516,393
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=0,528
-Size=554,372
+Pos=0,421
+Size=516,479
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1875,251
-ViewportId=0xE927CF2F
-Size=550,680
+Pos=1961,381
+Size=550,675
 Collapsed=0
 
+[Window][Test1]
+ViewportPos=1978,1119
+ViewportId=0x4B73F3E6
+Size=716,558
+Collapsed=0
+
+[Window][About Dear ImGui]
+ViewportPos=1443,183
+ViewportId=0x34B4C494
+Size=568,610
+Collapsed=0
+
+[Window][Example: Console]
+Pos=0,578
+Size=1600,322
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][Example: Log]
+ViewportPos=663,971
+ViewportId=0xBF126D42
+Size=500,400
+Collapsed=0
+
+[Window][Console]
+Pos=518,511
+Size=847,389
+Collapsed=0
+DockId=0x0000000B,0
+
+[Table][0xC9935533,3]
+Column 0  Weight=0.8471
+Column 1  Weight=1.1529
+Column 2  Weight=1.0000
+
+[Table][0x64418101,3]
+RefScale=18
+Column 0  Width=148
+Column 1  Width=126
+Column 2  Width=54
+
+[Table][0x47600645,3]
+RefScale=18
+Column 0  Width=89
+Column 1  Width=89
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=18
+Column 0  Width=111
+Column 1  Width=55
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x861D378E,3]
+Column 0  Weight=1.0446
+Column 1  Weight=0.9554
+Column 2  Weight=1.0000
+
+[Table][0x1F146634,3]
+RefScale=18
+Column 0  Width=55
+Column 1  Width=55
+Column 2  Width=55
+
+[Table][0xE0773582,3]
+Column 0  Weight=0.9190
+Column 1  Weight=1.0766
+Column 2  Weight=1.0044
+
+[Table][0xC179E37C,3]
+RefScale=18
+Column 0  Width=191 Sort=0v
+Column 1  Width=61
+Column 2  Width=-1
+
+[Table][0x8DFA6E86,2]
+Column 0  Weight=0.9683
+Column 1  Weight=1.0317
+
+[Table][0xFABAAEF7,2]
+Column 0  Weight=0.9083
+Column 1  Weight=1.0917
+
+[Table][0xA43C3885,3]
+RefScale=18
+Column 0  Width=59
+Column 1  Width=45
+Column 2  Width=45
+
+[Table][0x49F8DCEA,3]
+RefScale=20
+Column 0  Weight=1.0000
+Column 1  Width=129
+Column 2  Width=146
+
+[Table][0x82CBB907,3]
+Column 0  Weight=0.4076
+Column 1  Weight=1.1083
+Column 2  Weight=1.4841
+
+[Table][0x49D11DC0,3]
+RefScale=18
+Column 0  Width=69
+Column 1  Width=100
+Column 2  Width=69
+
+[Table][0x20DF7A63,4]
+RefScale=18
+Column 0  Width=31 Sort=0v
+Column 1  Width=53
+Column 2  Width=42
+Column 3  Weight=1.0000
+
+[Table][0xDA36A7E0,6]
+RefScale=18
+Column 0  Width=88
+Column 1  Width=87 Sort=0^
+Column 2  Width=116
+Column 3  Width=69
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0x63FD0B5E,2]
+Column 0  Weight=0.3940
+Column 1  Weight=0.6060
+
+[Table][0x9B8E7538,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x45A0E60D,7]
+RefScale=18
+Column 0  Width=45
+Column 1  Width=100
+Column 2  Width=100
+Column 3  Width=100
+Column 4  Width=100
+Column 5  Width=100
+Column 6  Width=100
+
+[Table][0x47822B9B,2]
+Column 0  Weight=0.4235
+Column 1  Weight=0.5765
+
+[Table][0x074A2E28,2]
+Column 0  Weight=0.4260
+Column 1  Weight=0.5740
+
+[Table][0xC6C4F1E8,2]
+Column 0  Weight=0.3460
+Column 1  Weight=0.6540
+
+[Table][0x5F2697E9,2]
+Column 0  Weight=0.4981
+Column 1  Weight=0.5019
+
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=294,341 Size=1600,876 Split=X Selected=0x995B0CF8
-  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=1228,701 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=554,701 Split=Y Selected=0x9A68760C
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=223,399 Selected=0x9A68760C
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=223,295 Selected=0xC89E3217
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=672,701 CentralNode=1 Selected=0x995B0CF8
-  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=370,701 Selected=0x968648AE
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=242,291 Size=1600,874 Split=X Selected=0x995B0CF8
+  DockNode        ID=0x00000003 Parent=0x3BC79352 SizeRef=2185,1351 Split=Y
+    DockNode      ID=0x00000007 Parent=0x00000003 SizeRef=1600,550 Split=X
+      DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=826,701 Split=Y Selected=0x9A68760C
+        DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=223,608 Selected=0x9A68760C
+        DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=223,741 Selected=0xC89E3217
+      DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1357,701 Split=Y Selected=0x995B0CF8
+        DockNode  ID=0x00000008 Parent=0x00000002 SizeRef=1319,960 CentralNode=1 Selected=0x995B0CF8
+        DockNode  ID=0x0000000B Parent=0x00000002 SizeRef=1319,389 Selected=0xF9BEF62A
+    DockNode      ID=0x00000009 Parent=0x00000003 SizeRef=1600,322 Selected=0x46B5E99C
+  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=373,1351 Selected=0x968648AE
 
